# llm-testing

./: .gitignore  .goreleaser.ci.yaml  .goreleaser.yaml  CHANGELOG.md  CODEOWNERS  Dockerfile  LICENSE  Makefile  Makefile.custom.mk  README.md  SECURITY.md  go.mod  go.sum  main.go  pyproject.toml  renovate.json5  run-test-suite.py  score-results.py  scoring_config.yaml
.circleci/: config.yml
.github/workflows/: auto-release.yaml  ci.yaml
cmd/: client.go  list.go  root.go  run.go  score.go  serve.go  version.go
helm/llm-testing/: Chart.yaml  values.schema.json  values.yaml
helm/llm-testing/templates/: _helpers.tpl  backendtrafficpolicy.yaml  deployment.yaml  httproute.yaml  ingress.yaml  oauth-secret.yaml  pvc.yaml  rbac.yaml  service.yaml
internal/kserve/: api_types.go  inferenceservice.go  inferenceservice_test.go  manager.go  manager_test.go  types.go
internal/llm/: client.go  client_test.go  options.go
internal/mcp/: handlers_test.go  list_handler.go  model_handler.go  path_validation.go  results_handler.go  run_handler.go  score_handler.go  tools.go
internal/runner/: qa.go  qa_test.go  runner.go  runner_test.go  strategy.go  strategy_test.go
internal/scorer/: prompts.go  scorer.go  scorer_test.go
internal/server/: context.go  oauth_http.go  oauth_http_test.go
internal/testsuite/: loader.go  loader_test.go  types.go
internal/testsuite/testdata/kubernetes-cka-v2/: config.yaml  questions.csv
internal/testutil/: mock_client.go
test_suites/kubernetes-cka-v2/: config.yaml
